# AQBot

./: .gitignore  README-AR.md  README-DE.md  README-EN.md  README-ES.md  README-FR.md  README-HI.md  README-JA.md  README-KO.md  README-RU.md  README-ZH-TW.md  README.md  package.json  playwright.perf.config.ts  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml  test-linux-build.yml
scripts/: bump-version.mjs  run-perf-tests.mjs  tauri-cli.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/core/: Cargo.toml
src-tauri/crates/core/src/: document_parser.rs  file_store.rs  inline_media.rs  inline_media_html.rs  inline_media_persistence.rs  inline_media_stream.rs  lib.rs  mcp_client.rs  pending_restore.rs  rag.rs  types.rs  webdav.rs
src-tauri/crates/core/src/entity/: inline_media_failures.rs  mod.rs
src-tauri/crates/core/src/pending_restore/: apply.rs  sqlite.rs
src-tauri/crates/core/src/repo/: backup.rs  cherry_import.rs  conversation.rs  drawing.rs  kelivo_import.rs  mcp_server.rs  message.rs  stored_file.rs  tool_execution.rs
src-tauri/crates/core/tests/: inline_media.rs
src-tauri/src/: diagnostics.rs  lib.rs  linux_webkit.rs  media_protocol.rs  window_lifecycle.rs
src/__tests__/: App.d2.test.tsx
src/hooks/: useDeferredChatMarkdown.ts  useGlobalOverlayScrollbars.ts  useResolvedAvatarSrc.ts  useVoiceChat.ts
src/lib/: browserMock.ts  chatHtmlRender.ts  chatImageActions.ts  chatMarkdown.ts  chatMarkdownCache.ts  chatMarkdownWorker.ts  drawingModels.ts  invoke.ts  legacyAvatarMedia.ts  memoryUtils.ts  (+5 more)
(+252 files in other folders)
