[package]
name = "aqbot-core"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
aes-gcm = "0.10"
async-trait = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-s3 = "1"
sha2 = "0.10"
base64 = "0.22"
reqwest = { version = "0.13", features = ["json", "stream"] }
futures = "0.3"
rmcp = { version = "1.2", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
regex = "1"
hex = "0.4"
toml_edit = "0.22"
sqlite-vec = { workspace = true }
libsqlite3-sys = { workspace = true }
pdf-extract = "0.7"
zip = "2"
litchi = "0.0.1"
dirs = "5"
tempfile = "3"
aqbot-migration = { path = "../migration" }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading"] }

[dev-dependencies]
sea-orm = { workspace = true, features = ["mock"] }
